gen/org/ballerinalang/parser/BallerinaParser.java
// This is a generated file. Not intended for manual editing.
package org.ballerinalang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.ballerinalang.psi.BallerinaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class BallerinaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == NULL_LITERAL) {
      r = NullLiteral(b, 0);
    }
    else if (t == ACTION_DEFINITION) {
      r = actionDefinition(b, 0);
    }
    else if (t == ACTION_INVOCATION) {
      r = actionInvocation(b, 0);
    }
    else if (t == ACTION_INVOCATION_STATEMENT) {
      r = actionInvocationStatement(b, 0);
    }
    else if (t == ANNOTATION) {
      r = annotation(b, 0);
    }
    else if (t == ANNOTATION_NAME) {
      r = annotationName(b, 0);
    }
    else if (t == ARGUMENT_LIST) {
      r = argumentList(b, 0);
    }
    else if (t == ASSIGNMENT_STATEMENT) {
      r = assignmentStatement(b, 0);
    }
    else if (t == BACKTICK_STRING) {
      r = backtickString(b, 0);
    }
    else if (t == BREAK_STATEMENT) {
      r = breakStatement(b, 0);
    }
    else if (t == CATCH_CLAUSE) {
      r = catchClause(b, 0);
    }
    else if (t == COMMENT_STATEMENT) {
      r = commentStatement(b, 0);
    }
    else if (t == CONNECTOR_BODY) {
      r = connectorBody(b, 0);
    }
    else if (t == CONNECTOR_DECLARATION) {
      r = connectorDeclaration(b, 0);
    }
    else if (t == CONNECTOR_DEFINITION) {
      r = connectorDefinition(b, 0);
    }
    else if (t == CONSTANT_DEFINITION) {
      r = constantDefinition(b, 0);
    }
    else if (t == ELEMENT_VALUE) {
      r = elementValue(b, 0);
    }
    else if (t == ELEMENT_VALUE_ARRAY_INITIALIZER) {
      r = elementValueArrayInitializer(b, 0);
    }
    else if (t == ELEMENT_VALUE_PAIR) {
      r = elementValuePair(b, 0);
    }
    else if (t == ELEMENT_VALUE_PAIRS) {
      r = elementValuePairs(b, 0);
    }
    else if (t == ELSE_CLAUSE) {
      r = elseClause(b, 0);
    }
    else if (t == ELSE_IF_CLAUSE) {
      r = elseIfClause(b, 0);
    }
    else if (t == EXPRESSION) {
      r = expression(b, 0);
    }
    else if (t == EXPRESSION_LIST) {
      r = expressionList(b, 0);
    }
    else if (t == FORK_JOIN_STATEMENT) {
      r = forkJoinStatement(b, 0);
    }
    else if (t == FUNCTION_BODY) {
      r = functionBody(b, 0);
    }
    else if (t == FUNCTION_DEFINITION) {
      r = functionDefinition(b, 0);
    }
    else if (t == FUNCTION_INVOCATION_STATEMENT) {
      r = functionInvocationStatement(b, 0);
    }
    else if (t == FUNCTION_NAME) {
      r = functionName(b, 0);
    }
    else if (t == IF_ELSE_STATEMENT) {
      r = ifElseStatement(b, 0);
    }
    else if (t == IMPORT_DECLARATION) {
      r = importDeclaration(b, 0);
    }
    else if (t == ITERATE_STATEMENT) {
      r = iterateStatement(b, 0);
    }
    else if (t == JOIN_CLAUSE) {
      r = joinClause(b, 0);
    }
    else if (t == JOIN_CONDITIONS) {
      r = joinConditions(b, 0);
    }
    else if (t == LITERAL_VALUE) {
      r = literalValue(b, 0);
    }
    else if (t == MAP_INIT_KEY_VALUE) {
      r = mapInitKeyValue(b, 0);
    }
    else if (t == MAP_INIT_KEY_VALUE_LIST) {
      r = mapInitKeyValueList(b, 0);
    }
    else if (t == NAMED_PARAMETER) {
      r = namedParameter(b, 0);
    }
    else if (t == NAMED_PARAMETER_LIST) {
      r = namedParameterList(b, 0);
    }
    else if (t == PACKAGE_DECLARATION) {
      r = packageDeclaration(b, 0);
    }
    else if (t == PACKAGE_NAME) {
      r = packageName(b, 0);
    }
    else if (t == PARAMETER) {
      r = parameter(b, 0);
    }
    else if (t == PARAMETER_LIST) {
      r = parameterList(b, 0);
    }
    else if (t == QUALIFIED_REFERENCE) {
      r = qualifiedReference(b, 0);
    }
    else if (t == QUALIFIED_TYPE_NAME) {
      r = qualifiedTypeName(b, 0);
    }
    else if (t == REPLY_STATEMENT) {
      r = replyStatement(b, 0);
    }
    else if (t == RESOURCE_DEFINITION) {
      r = resourceDefinition(b, 0);
    }
    else if (t == RETURN_PARAMETERS) {
      r = returnParameters(b, 0);
    }
    else if (t == RETURN_STATEMENT) {
      r = returnStatement(b, 0);
    }
    else if (t == RETURN_TYPE_LIST) {
      r = returnTypeList(b, 0);
    }
    else if (t == SERVICE_BODY) {
      r = serviceBody(b, 0);
    }
    else if (t == SERVICE_BODY_DECLARATION) {
      r = serviceBodyDeclaration(b, 0);
    }
    else if (t == SERVICE_DEFINITION) {
      r = serviceDefinition(b, 0);
    }
    else if (t == SIMPLE_TYPE) {
      r = simpleType(b, 0);
    }
    else if (t == SIMPLE_TYPE_ARRAY) {
      r = simpleTypeArray(b, 0);
    }
    else if (t == SIMPLE_TYPE_ITERATE) {
      r = simpleTypeIterate(b, 0);
    }
    else if (t == STATEMENT) {
      r = statement(b, 0);
    }
    else if (t == STRUCT_DEFINITION) {
      r = structDefinition(b, 0);
    }
    else if (t == STRUCT_DEFINITION_BODY) {
      r = structDefinitionBody(b, 0);
    }
    else if (t == THROW_STATEMENT) {
      r = throwStatement(b, 0);
    }
    else if (t == TIMEOUT_CLAUSE) {
      r = timeoutClause(b, 0);
    }
    else if (t == TRIGGER_WORKER) {
      r = triggerWorker(b, 0);
    }
    else if (t == TRY_CATCH_STATEMENT) {
      r = tryCatchStatement(b, 0);
    }
    else if (t == TYPE_CONVERTER_TYPES) {
      r = typeConverterTypes(b, 0);
    }
    else if (t == TYPE_CONVERTOR_BODY) {
      r = typeConvertorBody(b, 0);
    }
    else if (t == TYPE_CONVERTOR_DEFINITION) {
      r = typeConvertorDefinition(b, 0);
    }
    else if (t == TYPE_NAME) {
      r = typeName(b, 0);
    }
    else if (t == UNQUALIFIED_TYPE_NAME) {
      r = unqualifiedTypeName(b, 0);
    }
    else if (t == VARIABLE_DECLARATION) {
      r = variableDeclaration(b, 0);
    }
    else if (t == VARIABLE_REFERENCE) {
      r = variableReference(b, 0);
    }
    else if (t == VARIABLE_REFERENCE_LIST) {
      r = variableReferenceList(b, 0);
    }
    else if (t == WHILE_STATEMENT) {
      r = whileStatement(b, 0);
    }
    else if (t == WITH_FULL_SCHEMA_TYPE) {
      r = withFullSchemaType(b, 0);
    }
    else if (t == WITH_FULL_SCHEMA_TYPE_ARRAY) {
      r = withFullSchemaTypeArray(b, 0);
    }
    else if (t == WITH_FULL_SCHEMA_TYPE_ITERATE) {
      r = withFullSchemaTypeIterate(b, 0);
    }
    else if (t == WITH_SCHEAM_ID_TYPE_ARRAY) {
      r = withScheamIdTypeArray(b, 0);
    }
    else if (t == WITH_SCHEAM_ID_TYPE_ITERATE) {
      r = withScheamIdTypeIterate(b, 0);
    }
    else if (t == WITH_SCHEAM_URL_TYPE) {
      r = withScheamURLType(b, 0);
    }
    else if (t == WITH_SCHEMA_ID_TYPE) {
      r = withSchemaIdType(b, 0);
    }
    else if (t == WITH_SCHEMA_URL_TYPE_ARRAY) {
      r = withSchemaURLTypeArray(b, 0);
    }
    else if (t == WITH_SCHEMA_URL_TYPE_ITERATE) {
      r = withSchemaURLTypeIterate(b, 0);
    }
    else if (t == WORKER_DECLARATION) {
      r = workerDeclaration(b, 0);
    }
    else if (t == WORKER_INTERACTION_STATEMENT) {
      r = workerInteractionStatement(b, 0);
    }
    else if (t == WORKER_REPLY) {
      r = workerReply(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return compilationUnit(b, l + 1);
  }

  /* ********************************************************** */
  // 'null'
  public static boolean NullLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "NullLiteral")) return false;
    if (!nextTokenIs(b, NULLLITERAL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NULLLITERAL);
    exit_section_(b, m, NULL_LITERAL, r);
    return r;
  }

  /* ********************************************************** */
  // annotation* 'action' Identifier '(' parameterList ')' returnParameters?  ('throws' Identifier)? functionBody
  public static boolean actionDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionDefinition")) return false;
    if (!nextTokenIs(b, "<action definition>", AT, ACTION)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_DEFINITION, "<action definition>");
    r = actionDefinition_0(b, l + 1);
    r = r && consumeTokens(b, 0, ACTION, IDENTIFIER, LPAREN);
    r = r && parameterList(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && actionDefinition_6(b, l + 1);
    r = r && actionDefinition_7(b, l + 1);
    r = r && functionBody(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // annotation*
  private static boolean actionDefinition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionDefinition_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!annotation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actionDefinition_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // returnParameters?
  private static boolean actionDefinition_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionDefinition_6")) return false;
    returnParameters(b, l + 1);
    return true;
  }

  // ('throws' Identifier)?
  private static boolean actionDefinition_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionDefinition_7")) return false;
    actionDefinition_7_0(b, l + 1);
    return true;
  }

  // 'throws' Identifier
  private static boolean actionDefinition_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionDefinition_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, THROWS, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // packageName ':' Identifier '.' Identifier
  public static boolean actionInvocation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionInvocation")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = packageName(b, l + 1);
    r = r && consumeTokens(b, 0, COLON, IDENTIFIER, DOT, IDENTIFIER);
    exit_section_(b, m, ACTION_INVOCATION, r);
    return r;
  }

  /* ********************************************************** */
  // actionInvocation argumentList ';'
  public static boolean actionInvocationStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionInvocationStatement")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = actionInvocation(b, l + 1);
    r = r && argumentList(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, m, ACTION_INVOCATION_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // '@' annotationName ( '(' ( elementValuePairs | elementValue )? ')' )?
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && annotationName(b, l + 1);
    r = r && annotation_2(b, l + 1);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  // ( '(' ( elementValuePairs | elementValue )? ')' )?
  private static boolean annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2")) return false;
    annotation_2_0(b, l + 1);
    return true;
  }

  // '(' ( elementValuePairs | elementValue )? ')'
  private static boolean annotation_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && annotation_2_0_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( elementValuePairs | elementValue )?
  private static boolean annotation_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2_0_1")) return false;
    annotation_2_0_1_0(b, l + 1);
    return true;
  }

  // elementValuePairs | elementValue
  private static boolean annotation_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = elementValuePairs(b, l + 1);
    if (!r) r = elementValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean annotationName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, ANNOTATION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // '(' expressionList? ')'
  public static boolean argumentList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && argumentList_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARGUMENT_LIST, r);
    return r;
  }

  // expressionList?
  private static boolean argumentList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList_1")) return false;
    expressionList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // variableReferenceList '=' expression ';'
  public static boolean assignmentStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = variableReferenceList(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, m, ASSIGNMENT_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // ValidBackTickStringCharacters
  public static boolean backtickString(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "backtickString")) return false;
    if (!nextTokenIs(b, VALIDBACKTICKSTRINGCHARACTERS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, VALIDBACKTICKSTRINGCHARACTERS);
    exit_section_(b, m, BACKTICK_STRING, r);
    return r;
  }

  /* ********************************************************** */
  // backtickString                                                      // templateExpression
  //     |   functionName argumentList                                           // functionInvocationExpression
  //     |   actionInvocation argumentList                                       // actionInvocationExpression
  //     |   '[' expressionList ']'                                              // arrayInitializerExpression
  //     |   '{' mapInitKeyValueList '}'                                         // mapInitializerExpression
  //     |   'new' (packageName ':' )? Identifier ('(' expressionList? ')')?     // structInitializeExpression
  //     |    literalValue                                                        // literalExpression
  //     |   variableReference
  static boolean basicExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicExpression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = backtickString(b, l + 1);
    if (!r) r = basicExpression_1(b, l + 1);
    if (!r) r = basicExpression_2(b, l + 1);
    if (!r) r = basicExpression_3(b, l + 1);
    if (!r) r = basicExpression_4(b, l + 1);
    if (!r) r = basicExpression_5(b, l + 1);
    if (!r) r = literalValue(b, l + 1);
    if (!r) r = variableReference(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // functionName argumentList
  private static boolean basicExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicExpression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = functionName(b, l + 1);
    r = r && argumentList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // actionInvocation argumentList
  private static boolean basicExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicExpression_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = actionInvocation(b, l + 1);
    r = r && argumentList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '[' expressionList ']'
  private static boolean basicExpression_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicExpression_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACK);
    r = r && expressionList(b, l + 1);
    r = r && consumeToken(b, RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' mapInitKeyValueList '}'
  private static boolean basicExpression_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicExpression_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && mapInitKeyValueList(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'new' (packageName ':' )? Identifier ('(' expressionList? ')')?
  private static boolean basicExpression_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basicExpression_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW);
    r = r && basicExpression_5_1(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    r = r && basicExpression_5_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
